<resources>
    <string name="app_name">Laboratorio3Plataformas</string>
    <string name="btnvirus">Virus</string>
    <string name="btnsintomas">Sintomas</string>
    <string name="btnindicaciones">Indicaciones</string>
    <string name="nombre">Nombre</string>
    <string name="edad">Edad</string>

    <string name="infoEdad">

        Con el estallido del brote en España ha llegado también la alarma. La demanda de mascarillas
        creció un 8000% la semana pasada, pese a que las más vendidas no sirven para proteger contra
        el patógeno, y ya están agotadas en la mayoría de las farmacias. Las autoridades sanitarias
        recuerdan que el virus no se transmite por el aire y llaman a mantener la calma: la última campaña
        de gripe común en nuestro país causó 525.300 casos y 6.300 muertes. El CoVIT-19 es potencialmente
        mortal tan solo para determinados grupos de riesgo, que se definen en función de la edad y de que
        padezcan enfermedades previas. ¿Cuáles son?\n\n

        Los datos estadísticos aportados por los investigadores chinos del Equipo Epidemiológico de Respuesta
        de Emergencia a la Neumonía del Nuevo Coronavirus, tras analizar más de 70.000 pacientes afectados, apu
        ntan que el 81% de los casos son leves, el 13,8% son graves y un exiguo 4,7% son críticos. A este último
        grupo pertenecen los mayores de 80 años, en los que el virus alcanza un 14,8% de mortalidad. Estas son la
        s tasas por grupos de edad:\n\n

        En los afectados de entre 10 y 49 años se ha registrado un índice de mortalidad de entre el 0,2% y 0,4%. Sol
        o hay tasas superiores al 1% en las personas que mayores de 50 años. Se eleva al 3,6% en las personas de ent
        re 60 y 69 años y hasta el 8% en edades comprendidas entre los 70 y los 79 años. Hasta el momento, los niños
        parecen estar a salvo de los efectos más graves ya que ninguno ha fallecido a causa del virus.\n\n

        MÁS HOMBRES QUE MUJERES\n\n

        Este seguimiento muestra que en los grupos más jóvenes la mortalidad del virus es el doble que la de una gripe
        común, que ha causado la muerte a más hombres que mujeres (un 2,8% frente a un 1,7%), y que afecta especialmente
        a las personas con enfermedades previas, sobre todo de tipo cardiovascular (un 10% de la mortalidad), diabetes (un
        7,3% de mortalidad) y afecciones respiratorias crónicas (un 6,3%).\n\n

        Si analizamos los datos en conjunto, todo ello resulta en una mortalidad general del 2,3%, una cifra que se alinea
        con los datos que ya se venían manejando. No obstante, La Organización Mundial de la Salud (OMS) ha informado que es
        a tasa de mortalidad se corresponde más con la realidad de Wuhan que con la del resto del mundo, donde el índice se
        queda en un 0,7%.

    </string>
    <string name="comentar">Comentar</string>

    <string name="titulo">Corona Virus</string>

    <string name="sub1">
        Información general sobre el virus, formas de contagio
    </string>
    <string name="sub2">Información sobre los síntomas que se podrían presentar al contraerlo</string>
    <string name="sub3">Recomendaciones si se contrae el virus</string>

    <string name="desc1">
        Los coronavirus (CoV) son una amplia familia de virus que pueden causar diversas afecciones, desde el
        resfriado común hasta enfermedades más graves, como ocurre con el coronavirus causante del síndrome
        respiratorio de Oriente Medio (MERS-CoV) y el que ocasiona el síndrome respiratorio agudo severo (SRAS-CoV).
        Un nuevo coronavirus es una nueva cepa de coronavirus que no se había encontrado antes en el ser humano.\n\n

        Los coronavirus se pueden contagiar de los animales a las personas (transmisión zoonótica). De acuerdo con
        estudios exhaustivos al respecto, sabemos que el SRAS-CoV se transmitió de la civeta al ser humano y que se ha
        producido transmisión del MERS-CoV del dromedario al ser humano. Además, se sabe que hay otros coronavirus
        circulando entre animales, que todavía no han infectado al ser humano.
    </string>
    
    <string name="desc2">
        El COVID-19 se caracteriza por síntomas leves, como, dolor de garganta,
        tos y fiebre. La enfermedad puede ser más grave en algunas personas y
        provocar neumonía o dificultades respiratorias.\n\n

        Más raramente puede ser mortal. Las personas de edad avanzada y las personas con
        otras afecciones médicas (como asma, diabetes o cardiopatías) pueden ser más vulnerables
        y enfermar de gravedad.

    </string>


    <string name="desc3">
        Muchas personas que tienen coronavirus no permanecerán en un hospital y se
        quedarán aisladas en casa. Si presentas todos los síntomas del virus, pero no te has hecho
        la prueba, debes asumir que lo tienes y tomar precauciones.\n\n

        Cuidar a alguien con síntomas de coronavirus, de leves a moderados, es casi como cuidar a una
        persona con gripe. Proporciónale cuidados paliativos, líquidos, sopas y analgésicos, y haz que
        se tomen la temperatura con regularidad. Si una persona está demasiado enferma o débil para comer,
        beber o ir al baño, llama a un médico. La Organización Mundial de la Salud tiene lineamientos de
        cuidados en casa para pacientes con casos sospechosos o confirmados de coronavirus.\n\n

        ¡Sí! El paciente debe estar aislado en una habitación separada sin contacto con el resto de la casa, o
        contacto mínimo (incluyendo mascotas), además de que deberá usar un baño aparte, de ser posible. En la
        mayoría de los casos, una persona enferma se sentirá muy mal, pero podrá levantar las bandejas de comida
        que le dejen en la puerta y desinfectar un baño compartido después de usarlo. (En el caso de los niños,
        esto quizá no sea posible). Si tienes cubrebocas en casa, tanto el paciente como el cuidador deberán utilizar las
        cuando estén en contacto entre sí.\n\n

        Asegúrate de que los espacios compartidos en la casa estén bien ventilados, puedes encender el aire acondicionado
        o abrir una ventana. No compartas trastes, toallas ni ropa de cama con la persona enferma.

    </string>
</resources>
