<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.MainActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="406dp"
            android:layout_height="165dp"
            android:src="@drawable/coronavirus_hero"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.491"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/floatingChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="128dp"
            android:clickable="true"
            android:src="@drawable/virus_imgbtn"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.883"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnVirus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:text="@string/btnvirus"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnSintomas"
            app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnIndicaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:layout_marginEnd="24dp"
            android:text="@string/btnindicaciones"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <Button
            android:id="@+id/btnSintomas"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="420dp"
            android:layout_marginEnd="60dp"
            android:text="@string/btnsintomas"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnIndicaciones"
            app:layout_constraintTop_toBottomOf="@+id/imageView"
            app:layout_constraintVertical_bias="0.0" />

        <EditText
            android:id="@+id/edtNombre"
            android:layout_width="284dp"
            android:layout_height="43dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="56dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="92dp"
            android:layout_height="31dp"
            android:layout_marginTop="68dp"
            android:text="@string/nombre"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/edtEdad"
            android:layout_width="284dp"
            android:layout_height="46dp"
            android:layout_marginStart="28dp"
            android:layout_marginTop="25dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@+id/edtNombre" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="92dp"
            android:layout_height="31dp"
            android:layout_marginTop="40dp"
            android:text="@string/edad"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <ScrollView
            android:id="@+id/scrollView2"
            android:layout_width="420dp"
            android:layout_height="191dp"
            android:layout_marginTop="45dp"
            app:layout_constraintBottom_toTopOf="@+id/btnSintomas"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.489"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edtEdad"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtInfo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </ScrollView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
